WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23316
Application cache updating always fails with an assertion
https://bugs.webkit.org/show_bug.cgi?id=23316
Summary
Application cache updating always fails with an assertion
Alexey Proskuryakov
Reported
2009-01-14 06:45:14 PST
The assertion is bogus. A patch that will also fix a related crash is forthcoming.
Attachments
proposed patch
(8.23 KB, patch)
2009-01-14 06:49 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-01-14 06:49:40 PST
Created
attachment 26706
[details]
proposed patch
Darin Adler
Comment 2
2009-01-14 09:24:25 PST
Comment on
attachment 26706
[details]
proposed patch
> + // Release our reference to the newest cache. This could cause us to be deleted. > + // Any ongoing updates will be stopped from destructor. > + m_savedNewestCachePointer = m_newestCache.release().get();
I think it would be clearer to write this like this: m_savedNewestCachePointer = m_newestCache.get(); m_newestCache.clear(); That's because release() is a function used to transfer ownership, and we're really not doing that. r=me
Alexey Proskuryakov
Comment 3
2009-01-14 09:59:25 PST
Committed revision 39891.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug