        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=23316
        Application cache updating always fails with an assertion

        Test: http/tests/appcache/update-cache.html

        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::documentLoaderDestroyed): Correctly handle the case where
        multiple caches survive the last DocumentLoader destruction, preventing a crash in release
        builds.
        (WebCore::ApplicationCacheGroup::setNewestCache): Removed a bogus assertion.



git-svn-id: svn://svn.chromium.org/blink/trunk@39891 bbb929c8-8fbe-4397-9dbb-9b2b20218538